# d2b

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TODO.md  diff.txt  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md
delivery/: README.md  manifest.json  shared-contracts.json
docs/: README.md
examples/: README.md  qemu-media-dark-live.nix
examples/aca-wayland-poc/relay-bridge/: Cargo.toml
examples/aca-wayland-poc/relay-bridge/src/: main.rs
nix/: prebuilt.json  prebuilt.nix
nixos-modules/: allocator-json.nix  assertions.nix  base.nix  bundle-artifacts.nix  bundle.nix  cli.nix  clipboard.nix  closures-json.nix  d2b-ch-vsock-connect.nix  default.nix  desktop-metadata-json.nix  gateway-vm.nix  guest-control-host.nix  guest-control-token-materialize.py  guest-control.nix  guest-sshd-host-keys.nix  host-activation.nix  host-audit.nix  host-broker.nix  host-ch-exporter.nix  host-daemon.nix  host-json.nix  host-keys.nix  host-known-hosts.nix  host-otel-relay-acl.nix  host-polkit.nix  host-sidecars.nix  host-ssh-host-keys.nix  host-users.nix  host-wrapper.nix  host.nix  index-realms.nix  index-resources.nix  index-workloads.nix  index.nix  lib.nix  manifest.nix  minijail-profiles.nix  net-mdns.nix  net.nix  (+53 more)
pkgs/: delivery-tools.nix
proofs/w0-ch-connect-proof/: .gitignore  Cargo.toml
proofs/w0-ch-connect-proof/src/: lib.rs
scripts/: MIGRATION-PRE-V0.1.0.md  changelog-check.sh  migrate-d2b-v0.1.0.sh  migrate-nixling-v0.1.0.sh
tests/: AGENTS.md  README.md  activation-helper-eval.sh  adr-0015-presence-eval.sh  adr-index-coverage.sh  agents-md-rewrite-eval.sh  (+209 more)
(+1054 files in other folders)
