[package]
name = "w0-ch-connect-proof"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["macros", "net", "io-util", "time", "sync", "rt-multi-thread", "fs"] }
tokio-stream = "0.1"
ttrpc = { version = "0.9.0", default-features = false, features = ["async"] }

[workspace]
